--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -18,6 +18,12 @@
   flex-direction: row;
   align-items: stretch;
   box-shadow: 0 1px 20px rgba(0, 0, 0, 0.04);
+  transform: translateZ(0);
+  -webkit-transform: translateZ(0);
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  perspective: 1000px;
+  -webkit-perspective: 1000px;
 }
 
 .header::before {
@@ -154,7 +160,6 @@
 }
 
 .nav a:hover:not(.btn) {
-  color: var(--primary-dark);
   transform: translateY(-2px);
 }
 
