--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -17,6 +17,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  touch-action: pan-y pinch-zoom;
 }
 
 .carousel-slide {
@@ -224,17 +225,9 @@
     font-size: 1rem;
   }
   
+  /* Hide arrow buttons on mobile */
   .carousel-nav {
-    width: 50px;
-    height: 50px;
-  }
-  
-  .carousel-prev {
-    left: 1rem;
-  }
-  
-  .carousel-next {
-    right: 1rem;
+    display: none;
   }
   
   .carousel-indicators {
@@ -248,22 +241,42 @@
   }
 }
 
+/* Mobile-specific touch improvements */
+@media (max-width: 768px) {
+  .carousel-wrapper {
+    touch-action: pan-x pan-y;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+  }
+  
+  .carousel-slide {
+    touch-action: pan-x pan-y;
+  }
+}
+
+/* Extra small screens */
 @media (max-width: 480px) {
   .carousel-section {
     min-height: 500px;
   }
   
-  .carousel-nav {
-    width: 45px;
-    height: 45px;
+  .carousel-content {
+    padding: 0 0.5rem;
   }
   
-  .carousel-prev {
-    left: 0.5rem;
+  .carousel-title {
+    font-size: clamp(2rem, 4vw, 3rem);
   }
   
-  .carousel-next {
-    right: 0.5rem;
+  .carousel-description {
+    font-size: clamp(1rem, 1.8vw, 1.2rem);
+  }
+  
+  .carousel-button {
+    padding: 0.7rem 1.8rem;
+    font-size: 0.9rem;
   }
 }
 
